k8s/watchyourlan/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      securityContext:
        # runAsNonRoot: true
        # runAsUser: 1000
        # runAsGroup: 1000
        # fsGroup: 1000
      hostNetwork: true
      containers:
        - name: watchyourlan
          image: ghcr.io/aceberg/watchyourlan:2.1.4@sha256:f77532ca7c3c9a4398cb094df7674013a3d7fcf4699386f1e456c24df6fef00e
          resources:
            requests:
              memory: 100M
            limits:
              memory: 200M
          securityContext:
            privileged: false
            # allowPrivilegeEscalation: false
            # runAsNonRoot: true
            # runAsUser: 1000
            # runAsGroup: 1000
            # readOnlyRootFilesystem: true
            # capabilities:
            #   drop: [ALL]
          volumeMounts:
            - name: volume
              mountPath: /data/WatchYourLAN
          ports:
            - name: http
              containerPort: 8840
