k8s/watchyourlan/resources/internal-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

    gethomepage.dev/href: 'https://watchyourlan.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: watchyourlan
    gethomepage.dev/group: Status
    gethomepage.dev/icon: watchyourlan
    gethomepage.dev/name: WatchYourLAN
    gethomepage.dev/widget.type: customapi
    gethomepage.dev/widget.url: http://watchyourlan-service/api/all
    gethomepage.dev/widget.mappings.0.label: Devices
    gethomepage.dev/widget.mappings.0.format: size

spec:
  ingressClassName: internal
  rules:
    - host: &host watchyourlan.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
